--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -49,3 +49,62 @@ header nav ul li a:hover{
     text-decoration: underline 5px #dfc7a3;
 }
 
+#conteudo{
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap:20px;
+    padding: 20px;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 25px;
+    color: #25000b;
+    margin-top: 4rem;
+    margin-left: -4rem;
+    
+}
+
+.produto{
+    display: inline-block;
+    width: 230px;
+    margin: 5rem;
+    margin-top: 10rem;
+    background-color: #e7d6bc;
+    border: 0px solid #e7d6bc;
+    border-radius: 8px;
+    text-align: center;
+    cursor: pointer;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-size: 17px;
+    color: #380011;
+}
+.produto h3.produto p {
+    margin: 10px;
+}
+
+.produto img{
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.produto:hover {
+    transform: scale(1.05);
+    
+}
+
+.preco{
+    font-weight: 700;
+    margin-top: 30px;
+    color:rgb(255, 255, 255);
+    font-size: 1.7rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+button:hover{
+    background: #41151c;
+    color:rgb(255, 255, 255);
+}
