--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -104,7 +104,19 @@ main{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+button{
+    background: #eee5d9;
+    border: none;
+    margin-top: 25px;
+    margin-bottom: 18px;
+    padding: 15px 45px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #25000b;
+}
+
 button:hover{
     background: #41151c;
     color:rgb(255, 255, 255);
-}
+} 
