--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -121,3 +121,46 @@ button:hover{
     color:rgb(255, 255, 255);
 } 
 
+aside{
+    width: 300px;
+    padding: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 25px;
+    color:#25000b;
+    background: #6a1838;
+}
+
+footer{
+    background: #6a1838;
+    color:#fff;
+    padding: 20px 0;
+    margin-top: auto;
+}
+
+.footer-content{
+    display: flex;
+    justify-content: space-around;
+    max-width: 100%;
+    margin: 0 auto;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.footer-content h3{
+    margin-bottom: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.footer-content ul{
+    list-style: none;
+    padding: 0;
+}
+
+.footer-content li{
+    margin-bottom: 5px;
+}
+
+.footer-content a{
+    color:#ffffff;
+    text-decoration: none;
+    font-family: Georgia, 'Times New Roman', Times, serif
+}
