--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -164,3 +164,119 @@ footer{
     text-decoration: none;
     font-family: Georgia, 'Times New Roman', Times, serif
 }
+
+/* Responsividade */
+
+@media(max-width:768px){
+    header nav ul{
+        display: flex;
+        flex-direction: column;
+        gap:1rem;
+        align-items: center;
+    }
+    header nav ul li{
+        margin: 0;
+    }
+    #conteudo{
+        grid-template-columns: 1fr;
+    }
+    aside{
+        display: none;
+        width: 100%;
+    }
+}
+
+#conteudo {
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    gap: 20px;
+    padding: 20px;
+    align-items: flex-start;
+}
+
+@media (max-width: 900px) {
+    #conteudo {
+        grid-template-columns: 1fr;
+    }
+    /* aside {
+        border-radius: 20px;
+    } */
+    aside {
+        width: 100%;
+        margin-top: 30px;
+        padding: 20px;
+        position: static;
+        background: #6a1838 !important;
+        color: #fff !important;
+        border-radius: 20px;
+    }
+}
+
+aside h3 {
+    margin-bottom: 15px;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    border-bottom: 2px solid #fff;
+    padding-bottom: 5px;
+}
+
+aside ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+aside ul li {
+    margin-bottom: 10px;
+}
+
+aside ul li label {
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+aside ul li input[type="checkbox"] {
+    margin-right: 10px;
+    accent-color: #f5f0e6; /* Cor do checkbox */
+}
+
+aside button {
+    background: rgb(194, 184, 141);
+    color: #6a1838;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-top: 15px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+aside button:hover {
+    background: #dddfa4;
+    color: rgb(194, 184, 141);
+}
+
+.footer-content li{
+    margin-bottom: 5px;
+}
+
+.footer-content a{
+    color:#ddd;
+    text-decoration: none;
+}
+
+aside h2{
+    align-items: center;
+}
+
+.divider {
+    border-top: 1px solid #ccc;
+    margin: 10px 0;
+}
+
+a{
+    color: #fff;
+    list-style: none;
+    text-decoration: none;
+}
