--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -108,7 +108,6 @@ main{
 
 .produto:hover {
     transform: scale(1.05);
-    
 }
 
 button{
@@ -193,8 +192,6 @@ button:hover{
     color: #b72c2c;
 }
 
-  
-
 aside{
     width: 300px;
     padding: 30px;
@@ -253,7 +250,7 @@ body {
   
   /* === CONTATO === */
   .contato {
-    background: #fff8f2;
+    background: #890101;
     padding: 60px 20px;
   }
   
@@ -300,23 +297,28 @@ body {
 /*Contato - Formulario*/
 
 .formulario-contato {
-  background: #fffae9; 
+  background: #af2f2f; 
   padding: 30px;
-  max-width: 600px;
+  max-width: 500px;
   margin: 40px auto;
   border-radius: 15px;
   font-family: Arial, sans-serif;
-  color: black;
+  color: white;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   box-sizing: border-box;
 }
 
 .formulario-secao {
-  background-color: #b72c2c;
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../assets/img/fundo-formulario.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   padding: 40px 20px; 
   width: 100%;
   box-sizing: border-box;
+  color: whitesmoke; 
 }
+
 
 .formulario-contato h2 {
   margin-bottom: 20px;
@@ -351,7 +353,7 @@ body {
   margin-top: 10px;
   padding: 10px 25px;
   background-color: #f4a825;
-  color: black;
+  color: rgb(255, 255, 255);
   border: none;
   border-radius: 10px;
   font-weight: bold;
@@ -433,7 +435,7 @@ aside ul li label {
 
 aside ul li input[type="checkbox"] {
     margin-right: 10px;
-    accent-color: #f5f0e6; /* Cor do checkbox */
+    accent-color: #f5f0e6; 
 }
 
 aside button {
