--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -23,6 +23,8 @@ body{
     min-height: 100px;
 }
 
+/*Header*/
+
 header{
     position: relative;
     background-color: #b72c2c;
@@ -53,6 +55,41 @@ header nav ul li a{
 header nav ul li a:hover{
     text-decoration: underline 5px #f5cf85;
 }
+
+/*Banner - Home*/
+
+.banner {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.banner #image{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.banner-text {
+    font-family: var(--fonte-principal);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: bold;
+    z-index: 1;
+}
+
+.banner-text span {
+    font-family: var(--fonte-principal);
+    color: var(--color-font3);
+}
+
 
 #conteudo{
     display: grid;
@@ -243,7 +280,7 @@ footer{
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: #fff;
+    background-color: #fffae9;
     color: #333;
     box-sizing: border-box;
   }
