--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -71,14 +71,26 @@ header nav ul li a:hover{
     object-fit: cover;
     z-index: -1;
 }
-
+.banner-text::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* cor do quadrado */
+    padding: 20px;
+    border-radius: 8px;
+    z-index: -1; /* fica atrás do texto */
+}
 .banner-text {
     font-family: var(--fonte-principal);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     font-size: 3rem;
     font-weight: bold;
